Ui Changes for header and footeer

--- a/src/app/features/settings/_components/user-settings/user-settings.component.html
+++ b/src/app/features/settings/_components/user-settings/user-settings.component.html
@@ -1,4 +1,4 @@
-<div class="account-wrapper d-none d-md-flex">
+<div class="account-wrapper d-none d-lg-flex">
   <!-- Left: Sidebar -->
   <div class="sidebar-card w-25">
     <div class="user-profile">
