--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -31,3 +31,30 @@ router-outlet {
   margin-top: 20px;
   flex-grow: 1;
 }
+
+@media (max-width: 768px) {
+  .dashboard-container {
+    padding: 0 10px;
+  }
+
+  .header-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+    background-color: #fff;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  }
+
+  .body-wrapper {
+    padding-top: 60px;
+    margin-top: 60px;
+  }
+  .footer-wrapper {
+    width: 100%;
+    background-color: #f1f1f1;
+    padding: 10px;
+    text-align: center;
+  }
+}
