--- a/src/app/features/product/_components/detailed-product-list/detailed-product-list.component.scss
+++ b/src/app/features/product/_components/detailed-product-list/detailed-product-list.component.scss
@@ -130,4 +130,100 @@
   }
 }
 
+/* ✅ Responsive Styles */
+@media (max-width:1024) and (min-width: 820px) {
+  .product-container {
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  }
+
+  .product-card {
+    padding: 12px;
+  }
+
+  .product-image {
+    height: 200px;
+  }
+
+  .product-details {
+    padding: 10px 0;
+  }
+
+  .product-name {
+    font-size: 15px;
+  }
+
+  .product-meta {
+    font-size: 13px;
+  }
+
+  .product-actions button {
+    padding: 8px;
+    font-size: 13px;
+  }
+  
+}
+@media (max-width: 820px) and (min-width: 420px) {
+  .product-container {
+    grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+  }
+
+  .product-card {
+    display: inline-flex;;
+    padding: 10px;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  .product-image {
+    height: 180px;
+  }
+
+  .product-details {
+    padding: 8px 0;
+  }
+
+  .product-name {
+    font-size: 14px;
+  }
+
+  .product-meta {
+    font-size: 12px;
+  }
+
+  .product-actions button {
+    padding: 8px;
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 420px) and (min-width: 320px) {
+    .product-container {
+    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+  }
+  .product-card {
+    padding: 8px;
+  }
+
+  .product-image {
+    height: 150px;
+  }
+
+  .product-details {
+    padding: 6px 0;
+  }
+
+  .product-name {
+    font-size: 12px;
+  }
+
+  .product-meta {
+    font-size: 10px;
+  }
+
+  .product-actions button {
+    padding: 6px;
+    font-size: 10px;
+  }
+  
+}
 
