added justify-content-start to items

--- a/src/app/features/product/_components/product-filters/product-filters.component.html
+++ b/src/app/features/product/_components/product-filters/product-filters.component.html
@@ -9,7 +9,7 @@
       <span class="icon-category"></span> Category
     </h4>
     <div class="category-list">
-      <label *ngFor="let category of categories" class="category-item modern-checkbox">
+      <label *ngFor="let category of categories" class="category-item modern-checkbox justify-content-start">
         <input
           type="radio"
           name="category"
