--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -189,6 +189,7 @@
   background-color: #682f12;
   display: inline-flex;
   width: 100%;
+  padding: 5px 15px;
   .social-icons{
     display: flex;
     align-items: center;
