--- a/src/app/features/product/_components/detailed-product-list/detailed-product-list.component.html
+++ b/src/app/features/product/_components/detailed-product-list/detailed-product-list.component.html
@@ -23,6 +23,10 @@
           <ng-template #notWishlisted><span>🤍</span></ng-template>
         </div>
       </div>
+
+      <div class="add-to-cart">
+        <button class="btn " (click)="addProductToCart(product)">Add to Cart</button>
+        </div>
     </div>
   </div>
 </div>
